--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <script
       type="text/javascript"
       src="https://www.dropbox.com/static/api/2/dropins.js"
